<resources>
    <string name="app_name">Shoparty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="country">Country*</string>
    <string name="city">City*</string>
    <string name="street_landmark">Street/Landmark</string>
    <string name="building_no_apartment">Building no/Apartment</string>
    <string name="mobile">Mobile*</string>
    <string name="ship_to_same_address">Ship To Same Address</string>
    <string name="continue_to_payment">Continue To Payment</string>
    <string name="_14_0">$14.0</string>
    <string name="billing_details">Billing Details</string>
    <string name="summary">Summary</string>
    <string name="total">Total</string>
    <string name="_20_0">$20.0</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expirydate">ExpiryDate</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="view_order"><![CDATA[view order >]]></string>
    <string name="order_id_od12345678901">Order ID: OD12345678901</string>
    <string name="tesla_toys_kids_6_bundle_color_pack">Tesla Toys Kids 6+ Bundle Color Pack kjhdsjkhsjk djcdjcbjc sdjchbdcj</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="price_details">Price Details</string>
    <string name="_5_0">$5.0</string>
    <string name="orderdetails">Order Details</string>
    <string name="reason_for_cancellation">Reason for cancellation</string>
    <string name="changed_my_mind">Changed my mind</string>
    <string name="wrong_shipping_address">Wrong Shipping Address</string>
    <string name="expected_time_is_too_long">Expected time is too long</string>
    <string name="cancel_order_due_to_quality_issue">Cancel order due to quality issue</string>
    <string name="other">Other</string>
    <string name="additional_comments_optional">Additional comments(Optional)</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="my_account">My Account</string>
    <string name="my_order">My Orders</string>
    <string name="vouchers">Vouchers</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_profile">My Profile</string>
    <string name="address_book">Address Book</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions"><u>Terms And Conditions</u></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="cancellation_confirmed">Cancellation Confirmed</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="cancelled_on_aug_05">Cancelled On Aug 05</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="street">Street</string>
    <string name="copy">Copy</string>
    <string name="add">ADD</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="house_number">House Number</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="general_site_usage">General Site Usage</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="lorem_ipsum_is_simply_sep_16_2021">Lorem Ipsum is simply: Sep 16 2021</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only</string>
    <string name="_1_your_agreement">1. YOUR AGREEMENT</string>
    <string name="cvv">Cvv</string>
    <string name="add_new_address">Add New Address</string>
    <string name="_12">12</string>
    <string name="addres">Address</string>
    <string name="xyz">XYZ</string>
    <string name="phone_number">Phone Number</string>
    <string name="_999_9999_999">999 9999 999</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="ballons">Ballons</string>
    <string name="latex_ballons">Latex Ballons</string>
    <string name="fail_ballons">Fail Ballons</string>
    <string name="numbers">Numbers</string>
    <string name="characters">Characters</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="shapes">Shapes</string>
    <string name="_2_items">(2items)</string>
    <string name="candles">Candles</string>
    <string name="letters">Letters</string>
    <string name="sparkling">Sparkling</string>
    <string name="solar">Solar</string>
    <string name="colors">Colors</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="pink">Pink</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="clear">Clear</string>
    <string name="purple">Purple</string>
    <string name="tiffany">Tiffany</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="mix">Mix</string>
    <string name="more_ways_to_contact_us">More Ways To Contact Us</string>
    <string name="call_us_ksa">Call Us - KSA</string>
    <string name="_10_00_am_to_10_00_pm_ksa_time_sunday_to_saturday">10:00 AM To 10:00 PM KSA Time - Sunday To Saturday</string>
    <string name="get_social_with_us">Get Social With Us</string>
    <string name="mask">Mask</string>
    <string name="teeth">Teeth</string>
    <string name="wages">Wages</string>
    <string name="gloves">Gloves</string>
    <string name="barclays">Barclays</string>
    <string name="girls">Girls</string>
    <string name="crown">Crown</string>
    <string name="makeup">Makeup</string>
    <string name="hats">Hats</string>
    <string name="stick">Stick</string>
    <string name="mustache_beard">Mustache Beard</string>
    <string name="dresses">Dresses</string>
    <string name="princess">Princess</string>
    <string name="unisix">Unisix</string>
    <string name="careers_uniform">Careers Uniform</string>
    <string name="animals">Animals</string>
    <string name="fruit">Fruit</string>
    <string name="customize_it">Customize It</string>
    <string name="edit_add_you_images">Edit/Add You Images</string>
    <string name="_15">"15  "</string>
    <string name="t">T</string>
    <string name="text">Text</string>
    <string name="image_amp_background"><![CDATA[Image & Background]]></string>
    <string name="preview">Preview</string>
    <string name="color">color</string>
    <string name="apply">Apply</string>
    <string name="size">Size</string>
    <string name="s">"S  "</string>
    <string name="m">"M  "</string>
    <string name="xl">"Xl  "</string>
    <string name="xxl">"XXl  "</string>
    <string name="uk6">"UK6  "</string>
    <string name="uk7">UK7</string>
    <string name="uk8">"UK8  "</string>
    <string name="uk9">"UK9  "</string>
    <string name="uk10">"UK10  "</string>
    <string name="age">Age</string>
    <string name="baby_0_2_years">Baby 0-2 Years</string>
    <string name="toddler_2_4_years">Toddler 2-4 Years</string>
    <string name="adventures_5_7_years">Adventures 5-7 Years</string>
    <string name="pioneers_8">Pioneers 8+</string>
    <string name="mumz">Mumz</string>
    <string name="gender">Gender</string>
    <string name="boys">"Boys  "</string>
    <string name="girl">"Girl  "</string>
    <string name="unisex">"Unisex  "</string>
    <string name="women">"Women  "</string>
    <string name="price">Price</string>
    <string name="selected_price_range">Selected Price Range</string>
    <string name="lukman_khan">Lukman Khan</string>
    <string name="john_doe">John Doe</string>
    <string name="xyz_gmail_com">XYZ@gmail.com</string>
    <string name="american">American</string>
    <string name="_756">756</string>
    <string name="_26_august_2000">26 August 2000</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="tax_vat_5">Tax</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="total_price_for_2_item">Total price for</string>
    <string name="done">Done</string>
    <string name="cups">Cups</string>
    <string name="table_cover">Table Cover</string>
    <string name="tray">Tray</string>
    <string name="plates">Plates</string>
    <string name="bowl">Bowl</string>
    <string name="banner_flags">Banner-Flags</string>
    <string name="cutlery">Cutlery</string>
    <string name="tissue">Tissue</string>
    <string name="centre_piece">Centre Piece</string>
    <string name="pinata">Pinata</string>
    <string name="assorted">Assorted</string>
    <string name="bags">Bags</string>
    <string name="streamer">Streamer</string>
    <string name="confettie">Confettie</string>
    <string name="glasses">Glasses</string>
    <string name="horns_whistel">Horns-whistel</string>
    <string name="photo_booth">Photo-Booth</string>
    <string name="roll">Roll</string>
    <string name="straws">Straws</string>
    <string name="invitation_card">Invitation Card</string>
    <string name="give_away_bags">Give away bags</string>
    <string name="paper_fans">Paper Fans</string>
    <string name="decoration">Decoration</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="confirmation">Confirmation</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="xxxxxxxxxxx1234">xxxxxxxxxxx1234</string>
    <string name="xxxxxxxxxxxx56789">xxxxxxxxxxxx56789</string>
    <string name="add_card">+Add Card</string>
    <string name="pay_now">Pay Now</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="fugiat_aut_et_dolor_optio_culpa_est_odit_autem_voluptate">Fugiat aut et dolor optio culpa est odit autem voluptate.</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification">Verification</string>
    <string name="str_mobileno">Enter otp sent to mobile number</string>
    <string name="otp">OTP</string>
    <string name="resend_otp_sent_in">Resend OTP in</string>
    <string name="_2_min">2 Min</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are You sure?</string>
    <string name="yes">Yes</string>
    <string name="newest_to_oldest">Newest To Oldest</string>
    <string name="oldest_to_newest">Oldest To Newest</string>
    <string name="price_low_to_high">Price - Low To High</string>
    <string name="price_high_to_low">Price - High To Low</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="deals">Deals</string>
    <string name="sort_by">Sort By</string>
    <string name="countrycode">+966</string>
</resources>