<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/categoriesFragment"
        android:title="@string/categories"
        android:icon="@drawable/category_icon"/>
    <item
        android:id="@+id/dealsFragment"
        android:title="@string/deals"
        android:icon="@drawable/deals_icon"/>
    <item
        android:id="@+id/WishlistFragment"
        android:title="@string/wishlist"
        android:icon="@drawable/wishlist_icon"/>

    <item
        android:id="@+id/MyAccountFragment"
        android:title="@string/my_account"
        android:icon="@drawable/ic_myaccount_icon"/>
</menu>