<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.mainactivity.newarrival.SortBottomsheetFragment">

    <TextView
        android:id="@+id/sort_by_htv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/_20sdp"/>

    <View
        android:id="@+id/below_sort_by_htv_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#F8F8F8"
        android:layout_below="@+id/sort_by_htv"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newest_to_oldest"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16dp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F8F8F8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oldest_to_newest"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16dp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F8F8F8"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_low_to_high"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16dp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F8F8F8"/>
    <TextView
        android:id="@+id/newToOld_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_high_to_low"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16dp"
        android:textColor="@color/black"/>
    <View
        android:id="@+id/below_newToOld_tv_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="#F8F8F8"/>
</LinearLayout>