<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="36dp"
        android:paddingEnd="36dp">




    <TextView
        android:id="@+id/verification_htv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginTop="76dp" />
    <TextView
        android:id="@+id/verificationDescTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verification_htv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16dp"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:text="@string/str_mobileno"/>

        <TextView
            android:id="@+id/tv_mobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/verificationDescTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16dp"
            android:lines="1"
            android:text=""/>

    <TextView
        android:id="@+id/verification_mobile_htv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/verificationDescTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="49dp"/>
    <EditText
        android:id="@+id/verification_ed_txt"
        style="@style/AppTheme.editText_gray"
        android:imeOptions="actionNext"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/verification_mobile_htv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
       />

    <TextView
        android:id="@+id/verification_resend_otp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp_sent_in"
        app:layout_constraintTop_toBottomOf="@+id/verification_ed_txt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_min"
        android:textSize="15dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/verification_resend_otp_tv"
        app:layout_constraintTop_toBottomOf="@+id/verification_ed_txt"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/verification_resend_otp_tv"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/customize_btn_bg"
        android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
