<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.shoparty.android.ui.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp">



    <TextView
        android:id="@+id/signIn_htv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:textStyle="bold"
        android:layout_marginTop="76dp"
        />
    <TextView
        android:id="@+id/signin_desc_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signIn_htv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16dp"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:text="@string/fugiat_aut_et_dolor_optio_culpa_est_odit_autem_voluptate"/>








        <TextView
        android:id="@+id/signin_mobile_htv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@+id/signin_desc_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="49dp"/>

        <RelativeLayout
            android:id="@+id/const_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/signin_mobile_htv">


            <EditText
                android:id="@+id/etCountryCode"
                style="@style/AppTheme.editText_gray_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signin_ed_bg"
                android:text="@string/countrycode"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="@color/black" />


            <EditText
                android:id="@+id/etMobileNo"
                style="@style/AppTheme.editText_gray"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_toRightOf="@+id/etCountryCode"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:singleLine="true"
                android:text="@={loginViewModel.etMobileNo}" />
        </RelativeLayout>



    <Button
        android:id="@+id/btnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/const_mobile"
        android:layout_marginTop="86dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/get_otp"
        android:textColor="@color/white"
        android:background="@drawable/customize_btn_bg"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnGetOtp"
        app:layout_constraintStart_toStartOf="@+id/btnGetOtp"
        app:layout_constraintEnd_toEndOf="@+id/btnGetOtp"
        android:orientation="horizontal"
        android:layout_marginTop="58dp"
        android:gravity="">
        <TextView
            android:id="@+id/donot_hvac_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"

            />
        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="15dp"
            android:textColor="@color/color_pink"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>